# debate

./: .gitignore  AGENTS.md  CONFIG_AUTO_SETUP_GUIDE.md  FINAL_SETUP_GUIDE.md  LICENSE  MANIFEST.in  PYPI_GUIDE.md  README.md  build_and_upload.py  config.yaml  config.yaml.example  debate_agents_main.py  dynamic_debate.md  env_example.txt  main.py  pyproject.toml  requirements.txt  run_tests.py  setup_github.sh  test_debate.exp  test_markdown_conversion.py
.cursor/rules/: app.mdc  debate_orchestrator_todo.mdc  debate_test_environment.mdc  dynamic_debate.mdc  todo.mdc
debate_logs/: 20250803_205344_전범국의_후손들은_그_선조의_죄를_언제까지_사죄해야하나.md  20250803_210556_3배_레버리지_ETF는_투자대상으로서_적합한가.md  20250803_211700_AI시대에_보편적_기본소득은_필수적인가.md  20250803_212941_AI가_인간을_넘어설_때,_인간이_AI를_제어하는....md  20250803_220838_개인자산의_부동산_쏠림은_국가경제발전의_걸림돌이다..md  20250804_102634_짬뽕을_먹을_것인가_짜장면을_먹을_것인가.md  20250804_104006_짬뽕이냐_짜장면이냐.md  20250804_161552_인공지능이_바둑을_더_잘_두는_시대에,_바둑을_배....md  20250805_142553_청소년_범죄의_흉악화로_아동범죄에_대한_형량을_더....md  20250805_143922_국토의_균형적_발전을_위해정부부처는_정부가_결정하....md  20250805_155817_우주는_끝없이_팽창하는가.md  20250805_172844_극우정당을_지지하는_자들은_지능이_떨어지는가.md  20250806_113012_인간에게_노동은_꼭_필요한_것인가.md  20250806_114646_AI와_로봇으로_자동화된_세계는_인간에게_축복인가....md  20250806_132343_지구_인류는_이제_지구를_벗어나_다행성종족이_되어....md  20250806_134234_인류는_이_우주의_유일한_지적_생명체인가.md  20250806_135555_미국달러스테이블코인_활성화는_타국의_통화주권을_침....md  20250806_142921_이더리움은_비트코인과는_다른_기능을_하며_양대_코....md  20250806_143934_주식투자_수익은_불로소득인가.md  20250806_144949_주식투자수익은_불로소득인가.md  20250806_150314_주식투자수익은_불로소득인가_자본주의_사회에서의_투....md  20250806_151841_니체의_노예의_도덕과_주인의_도덕은_자유민주주의국....md  20250806_153948_전기차는_진정한_친환경차인가.md  20250806_165343_MBTI는_유사과학이며_심리학적_신뢰성이_없다..md  20250806_170845_정신분석학은_엄밀한_과학이나_의학이_아니며_시대에....md  20250809_145514_대한민국_2030년_,_서울부동산이냐_비트코인이냐.md  20250811_170045_인간의_수명은_계속_늘어날_것인가.md
src/: __init__.py
src/agents/: __init__.py  debate_manager.py  debate_orchestrator.py  debate_presenter.py  panel.py  panel_agent.py  (+3 more)
tests/: README.md  basic_unit_test.py  debug_orchestrator.py  simple_test.py  test_debate_orchestrator.py  test_round_completion_fix.py  test_round_specific.py
yaml/: __init__.py
(+4 files in other folders)
